# gram

./: .gitignore  .pre-commit-config.yaml  README.txt  pyproject.toml
src/gram/: __init__.py  __main__.py  args.py  cli.py  logger.py
src/gram/encoders/: __init__.py  base.py  registry.py
src/gram/encoders/modules/: __init__.py  ascii85.py  base32.py  base64_.py  binary.py  hexadecimal.py  html_.py  punycode.py  quoted_printable.py  unicode.py  url.py
