[project]
name = "gram-encoder"
version = "0.2.1"
description = "Gram is a simple and efficient data encoding utility."
authors = [{ name = "Ryan R.", email = "pwnfo@proton.me" }]
readme = "README.txt"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.scripts]
gram = "gram.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gram"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
   \.git
  | env
  | build
  | dist
)/
'''

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
files = "src/"
